data/forge_javadoc/1.7.10/processed/net_minecraft_potion_PotionHelper.md
# PotionHelper

**Inheritance:** java.lang.Object → net.minecraft.potion.PotionHelper

## Class signature

```java
public class PotionHelper extends java.lang.Object
```

## Constructors

- `PotionHelper()`

## Methods

- `static int applyIngredient(int p_77913_0_, java.lang.String p_77913_1_)`
- `static int calcPotionLiquidColor(java.util.Collection p_77911_0_)`
- `static boolean checkFlag(int p_77914_0_, int p_77914_1_)`
- `static java.lang.String func_77905_c(int p_77905_0_)`
- `static int func_77908_a(int p_77908_0_, int p_77908_1_, int p_77908_2_, int p_77908_3_, int p_77908_4_, int p_77908_5_)`
- `static int func_77909_a(int p_77909_0_)`
- `static int func_77915_a(int p_77915_0_, boolean p_77915_1_)`
- `static boolean func_82817_b(java.util.Collection p_82817_0_)`
- `static java.util.List getPotionEffects(int p_77917_0_, boolean p_77917_1_)`

## Fields

- `static java.lang.String blazePowderEffect`
- `static java.lang.String fermentedSpiderEyeEffect`
- `static java.lang.String field_151423_m`
- `static java.lang.String field_77924_a`
- `static java.lang.String ghastTearEffect`
- `static java.lang.String glowstoneEffect`
- `static java.lang.String goldenCarrotEffect`
- `static java.lang.String gunpowderEffect`
- `static java.lang.String magmaCreamEffect`
- `static java.lang.String redstoneEffect`
- `static java.lang.String speckledMelonEffect`
- `static java.lang.String spiderEyeEffect`
- `static java.lang.String sugarEffect`